Fix contrast color, add alt in image attribute, add link text | Ine

--- a/css/resume.css
+++ b/css/resume.css
@@ -40,7 +40,7 @@ h2 {
   font-weight: 500;
   font-family: 'Saira Extra Condensed', serif;
   font-size: 1.35rem;
-  color: #14B389 !important;
+  color: #15755c !important;
 }
 
 .list-social-icons a {
@@ -143,7 +143,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .text-primary {
-  color: #18DCA8 !important;
+  color: #15755c !important;
 }
 
 a {
@@ -151,9 +151,9 @@ a {
 }
 
 .navbar-dark .navbar-nav .nav-link.active{
-  color: #18DCA8 !important;
+  color: #15755c !important;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #343a40;
 }
